Fixed text alignment

--- a/public/homeStyle.css
+++ b/public/homeStyle.css
@@ -93,3 +93,7 @@ div img {
     font-size: 2em;
     color: black;
   }
+  
+  div.name {
+      text-align: end;
+  }
